there is a bug where title on din in page is turning orange on mobile. but not showing in dev tools.... seeing if putting !important fixes it.

--- a/app/dine-in-menu/page.css
+++ b/app/dine-in-menu/page.css
@@ -8,7 +8,7 @@
     margin-top: 5rem;
     font-family: "Open Sans", sans-serif;
     margin-left: 5%;
-    color: #1f243a;
+    color: #1f243a !important;
     font-weight: 600;
 }
 .order-link{
